--- a/templates/left_bar.html
+++ b/templates/left_bar.html
@@ -51,6 +51,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
+            <HR width="80%">
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="/illness/">All</a>
             </li>
@@ -66,8 +67,13 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="/illness/?i=cancer">Cancer</a>
             </li>
+            <HR width="80%">
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="/cfg/manual">tweets</a>
+            </li>
         </ul>
     </div>
+
 </nav>
 
 <div class="container-fluid p-0">
