add dictionary page

--- a/templates/left_bar.html
+++ b/templates/left_bar.html
@@ -71,6 +71,9 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="/cfg/manual">tweets</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="/cfg/dictionary">dictionary</a>
+            </li>
         </ul>
     </div>
 
