--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,18 @@
                 <br>
                 <span class="text-primary">Intelligent Tweet Collation for health related information</span>
             </h1>
-            <div class="subheading mb-5">Member Member Member Member Member
+            <div class="subheading mb-5">
+                <table class="table table-condensed">
+                    <tbody>
+                    <tr>
+                        <td style="color: darkgrey">Jian Ye</td>
+                        <td style="color: darkgrey">Linxuan Zhang</td>
+                        <td style="color: darkgrey">Simon Sundstrom</td>
+                        <td style="color: darkgrey">Tianyu Xie</td>
+                        <td style="color: darkgrey">Ximing Zhan</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
             <p class="lead mb-5">The aim of this project is to create an intelligent application that automatically
                 collates existing and new tweets which contain health-related information. A user is able to specify the
