--- a/templates/left_bar.html
+++ b/templates/left_bar.html
@@ -64,9 +64,9 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="/illness/?i=pneumonia">Pneumonia</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="/illness/?i=cancer">Cancer</a>
-            </li>
+{#            <li class="nav-item">#}
+{#                <a class="nav-link js-scroll-trigger" href="/illness/?i=cancer">Cancer</a>#}
+{#            </li>#}
             <HR width="80%">
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="/cfg/manual">tweets</a>
