--- a/templates/left_bar.html
+++ b/templates/left_bar.html
@@ -64,16 +64,20 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="/illness/?i=pneumonia">Pneumonia</a>
             </li>
-{#            <li class="nav-item">#}
-{#                <a class="nav-link js-scroll-trigger" href="/illness/?i=cancer">Cancer</a>#}
-{#            </li>#}
+            {#            <li class="nav-item">#}
+            {#                <a class="nav-link js-scroll-trigger" href="/illness/?i=cancer">Cancer</a>#}
+            {#            </li>#}
             <HR width="80%">
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="/cfg/manual">tweets</a>
+                <a class="nav-link js-scroll-trigger" href="/cfg/tweets/?t=manual">manual labels</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="/cfg/tweets/?t=auto">auto labels</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="/cfg/dictionary">dictionary</a>
             </li>
+            <HR width="80%">
         </ul>
     </div>
 
