change github repository url

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 determined to be relevant to them. Tweets that have been presented to be of less significant relevance
                 will be classified into other categories or topic of discussion which may be useful later.</p>
             <div class="social-icons">
-                <a target="_blank" href="https://github.com/">
+                <a target="_blank" href="https://github.com/xzhan99/capstone_website">
                     <i class="fab fa-github"></i>
                 </a>
                 <a target="_blank" href="https://twitter.com/home?lang=en">
