add a tag for external links

--- a/templates/tweet_list.html
+++ b/templates/tweet_list.html
@@ -30,7 +30,7 @@
                     {% for t in list %}
                         <tr>
                             <td>{{ t.time }}</td>
-                            <td>{{ t.text }}</td>
+                            <td>{{ t.text|safe }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
